# spectrum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  images.qrc  spectrum.pro  vcpkg.json
calc/: README.md  test_GraphMath.py
docs/: build.md
help/: add_csv.md  add_formula.md  derivative.md  despike.md  index.md  lua_primer.md  mavg_simple.md  normalize.md  offset.md  refresh.md  reopen.md  scale.md
release/: README.md  helpers.py  history.yaml  make_package.py  version.pri  version.rc  version.rc.in  version.rc.template  version.txt
src/: CsvConfigDialog.cpp  CsvConfigDialog.h  CustomPrefs.cpp  CustomPrefs.h  HelpSystem.cpp  HelpSystem.h  MainWindow.cpp  MainWindow.h  OpenFileDlg.cpp  OpenFileDlg.h  Operations.cpp  Operations.h  PlotWindow.cpp  PlotWindow.h  Settings.cpp  Settings.h  app.qrc  app.qss  app.rc  help.css  images.qrc  main.cpp
src/app/: AppSettings.cpp  AppSettings.h  HelpSystem.cpp  HelpSystem.h  PersistentState.cpp  PersistentState.h
src/core/: BaseTypes.cpp  BaseTypes.h  DataExporters.cpp  DataExporters.h  DataReaders.cpp  DataReaders.h  DataSources.cpp  DataSources.h  Events.cpp  Events.h  FileUtils.cpp  FileUtils.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  GraphMath.cpp  GraphMath.h  LuaHelper.cpp  LuaHelper.h  Modificators.cpp  Modificators.h  Modifiers.cpp  Modifiers.h  Project.cpp  Project.h  ProjectFile.cpp  ProjectFile.h  StringUtils.cpp  StringUtils.h
src/dialogs/: CsvConfigDialog.cpp  CsvConfigDialog.h  OpenFileDlg.cpp  OpenFileDlg.h
src/funcs/: FuncBase.cpp  FuncBase.h  FuncMakeFromClipboard.cpp  FuncMakeFromClipboard.h  FuncMakeFromText.cpp  FuncMakeFromText.h  FuncPlotClipboard.cpp  FuncPlotText.cpp  FuncPlotText.h  FuncPlotTextClipboard.h  FuncPlotTextFile.cpp  FuncPlotTextFile.h  FuncRandomSample.cpp  FuncRandomSample.h  FuncRandomSampleParams.cpp  FuncRandomSampleParams.h
src/tests/: TestSuite.h  test_DataReaders.cpp  test_GraphMath.cpp  test_LuaHelper.cpp  test_StringUtils.cpp
src/widgets/: CodeEditor.cpp  CodeEditor.h  DataGridPanel.cpp  DataGridPanel.h  RangeEditor.cpp  RangeEditor.h
src/windows/: HelpWindow.cpp  HelpWindow.h  MainWindow.cpp  MainWindow.h  PlotWindow.cpp  PlotWindow.h
uml/: diagram.drawio
vcpkg/qt5/: vcpkg.json
vcpkg/qt6/: vcpkg.json
